# TGControlPanel

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.py  telegram_bot  telegram_bot.cpp  toolchain.cmake
.github/workflows/: linux-build.yml  linux.build.yml  windows.build.yml
conanProfiles/: tgbot
include/: button_function.h  keyboards.h  multi_media.h  pch.h  utils.h
includes/libraries/Windows/openssl/: configuration.h
includes/libraries/windows/SDL2/: SDL_config.h
includes/sources/: button_function.h  multi_media.h  pch.h  utils.h
src/: TGControlPanel.cpp  button_function.cpp  multi_media.cpp  telegram_bot.cpp
